--- a/app.yaml
+++ b/app.yaml
@@ -15,6 +15,8 @@ handlers:
 libraries:
 - name: webapp2
   version: "2.5.2"
-
+- name: ssl
+  version: "2.7"
+  
 env_variables:
   KEY: 'dev-secret'
